fix clippig on hero

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -11,8 +11,6 @@
     font-size: 16px;
    
 }
-
-
 body {
     width: 100%;
     background-color: aliceblue;
@@ -79,6 +77,7 @@ nav a:hover {
    }
     .nav-list{
     position: absolute;
+    z-index: 1;
     right: 0px;
     height: 92vh;
     top: 12vh;
@@ -125,7 +124,7 @@ nav a:hover {
 /* Hero Image */
 .image-container{
     background-image: url(/resources/img/hero-bannner.jpeg);   
-    z-index: -1;
+    
     height: 40rem;
     background-position: center; 
     background-repeat: no-repeat;
